--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "start": "vite",
     "build": "tsc && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit"
   },
   "eslintConfig": {
     "extends": [
