--- a/electron/package.json
+++ b/electron/package.json
@@ -7,7 +7,9 @@
   "type": "module",
   "scripts": {
     "package": "electron-builder",
-    "package:publish": "electron-builder --publish always"
+    "package:publish": "electron-builder --publish always",
+    "lint": "eslint .",
+    "type-check": "tsc --noEmit"
   },
   "build": {
     "appId": "com.lumiov.app",
@@ -63,8 +65,11 @@
   },
   "devDependencies": {
     "@types/node": "25.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
     "electron": "40.1.0",
     "electron-builder": "26.7.0",
+    "eslint": "^9.39.2",
     "typescript": "^5.3.0"
   },
   "dependencies": {
