--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches: [development, "release/**", main]
+    branches: [development, main]
   push:
     branches: [development]
 
