--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   deploy:
     name: Deploy to GitHub Pages (lumiov-releases)
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
 
