--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           git fetch origin main
           git checkout main
-          git merge --no-ff "${{ inputs.release-branch }}" -m "chore: merge ${{ inputs.release-branch }} into main"
+          git merge --no-ff "${{ inputs.release-branch }}" -m "chore: Merge ${{ inputs.release-branch }} into main"
 
       - name: Bump final version & changelog
         id: version
@@ -209,7 +209,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git fetch origin main
-          git merge origin/main --no-edit -m "chore: merge main back into development after ${{ needs.finalize.outputs.tag }}"
+          git merge origin/main --no-edit -m "chore: Merge main back into development after ${{ needs.finalize.outputs.tag }}"
           git push origin development
 
       - name: Clean up release branch
