--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build:backend": "cd backend && npm run build",
     "build:electron": "cd electron && tsc -p tsconfig.json",
     "electron": "npm run build && electron electron/.",
-    "package": "npm run build && cd electron && npx electron-builder",
+    "package": "npm run build && cd electron && npm run package",
+    "package:publish": "npm run build && cd electron && npm run package:publish",
     "clean": "rimraf electron/dist electron/release",
     "release": "standard-version",
     "release:rc": "standard-version --prerelease rc",
