--- a/.versionrc.json
+++ b/.versionrc.json
@@ -2,14 +2,14 @@
   "types": [
     { "type": "feat", "section": "Features" },
     { "type": "fix", "section": "Bug Fixes" },
-    { "type": "chore", "section": "Maintenance", "hidden": false },
-    { "type": "docs", "section": "Documentation", "hidden": false },
+    { "type": "chore", "section": "Maintenance", "hidden": true },
+    { "type": "docs", "section": "Documentation", "hidden": true },
     { "type": "style", "section": "Code Style", "hidden": true },
-    { "type": "refactor", "section": "Code Refactoring", "hidden": false },
-    { "type": "perf", "section": "Performance Improvements", "hidden": false },
-    { "type": "test", "section": "Tests", "hidden": false },
-    { "type": "build", "section": "Build System", "hidden": false },
-    { "type": "ci", "section": "CI/CD", "hidden": false }
+    { "type": "refactor", "section": "Code Refactoring", "hidden": true },
+    { "type": "perf", "section": "Performance Improvements", "hidden": true },
+    { "type": "test", "section": "Tests", "hidden": true },
+    { "type": "build", "section": "Build System", "hidden": true },
+    { "type": "ci", "section": "CI/CD", "hidden": true }
   ],
   "bumpFiles": [
     {
