--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "package": "npm run build && cd electron && npm run package",
     "package:publish": "npm run build && cd electron && npm run package:publish",
     "clean": "rimraf electron/dist electron/release",
-    "release": "standard-version",
-    "release:rc": "standard-version --prerelease rc",
-    "release:dry-run": "standard-version --dry-run",
+    "release": "commit-and-tag-version",
+    "release:rc": "commit-and-tag-version --prerelease rc",
+    "release:dry-run": "commit-and-tag-version --dry-run",
     "prepare": "husky install",
     "commitlint": "commitlint --edit"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.4.1",
     "@commitlint/config-conventional": "^20.4.1",
+    "commit-and-tag-version": "12.6.1",
     "concurrently": "^8.2.0",
     "husky": "^9.0.0",
-    "rimraf": "^6.1.3",
-    "standard-version": "^9.5.0"
+    "rimraf": "^6.1.3"
   }
 }
