--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,10 +54,10 @@ jobs:
       - name: Bump final version & changelog
         id: version
         run: |
-          # standard-version strips prerelease suffix and finalizes
-          npx standard-version --skip.bump --skip.commit --skip.tag
+          # commit-and-tag-version strips prerelease suffix and finalizes
+          npm run release
 
-          # Re-read version without RC suffix — strip it manually if standard-version didn't
+          # Re-read version without RC suffix — strip it manually if commit-and-tag-version didn't
           CURRENT=$(node -p "require('./package.json').version")
           FINAL="${CURRENT%%-rc*}"
 
@@ -75,7 +75,7 @@ jobs:
               fi
             done
             # Re-generate changelog for clean final version
-            npx standard-version --skip.bump --skip.commit --skip.tag
+            npm run release
           fi
 
           VERSION="$FINAL"
