--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
     "ws": "^8.19.0"
   },
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
