--- a/.versionrc.json
+++ b/.versionrc.json
@@ -6,7 +6,7 @@
     { "type": "docs", "section": "Documentation", "hidden": true },
     { "type": "style", "section": "Code Style", "hidden": true },
     { "type": "refactor", "section": "Code Refactoring", "hidden": true },
-    { "type": "perf", "section": "Performance Improvements", "hidden": true },
+    { "type": "perf", "section": "Performance Improvements", "hidden": false },
     { "type": "test", "section": "Tests", "hidden": true },
     { "type": "build", "section": "Build System", "hidden": true },
     { "type": "ci", "section": "CI/CD", "hidden": true }
