--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "package": "npm run build && cd electron && npm run package",
     "package:publish": "npm run build && cd electron && npm run package:publish",
     "clean": "rimraf electron/dist electron/release",
-    "release": "commit-and-tag-version --skip.bump --skip.commit --skip.tag",
-    "release:rc": "commit-and-tag-version --prerelease rc --skip.commit --skip.tag",
-    "release:dry-run": "commit-and-tag-version --dry-run",
+    "release": "semantic-release",
+    "release:dry-run": "semantic-release --dry-run",
     "prepare": "husky install",
     "commitlint": "commitlint --edit",
     "format": "prettier --write \".\"",
@@ -43,12 +42,19 @@
   "devDependencies": {
     "@commitlint/cli": "^20.4.2",
     "@commitlint/config-conventional": "^20.4.2",
-    "commit-and-tag-version": "12.6.1",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/commit-analyzer": "13.0.1",
+    "@semantic-release/exec": "7.1.0",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "12.0.6",
+    "@semantic-release/npm": "13.1.4",
+    "@semantic-release/release-notes-generator": "14.1.0",
     "concurrently": "^8.2.0",
     "husky": "^9.0.0",
     "lint-staged": "16.2.7",
     "prettier": "3.8.1",
-    "rimraf": "^6.1.3"
+    "rimraf": "^6.1.3",
+    "semantic-release": "25.0.3"
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,jsx,json,css,md}": [
